
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int assert (int) ;
 int leak_once (char**,char**) ;
 int memcpy (char*,char*,int) ;
 int min (int,int) ;

__attribute__((used)) static int leak_once_and_copy(char *out, int out_len) {
 assert(out_len > 0);

 char *start, *end;
 leak_once(&start, &end);

 int size = min(end - start, out_len);
 memcpy(out, start, size);

 if (size == out_len)
  return size;

 out[size] = 0;
 return size + 1;
}
